--- a/app/src/main/res/layout/activity_add_weight.xml
+++ b/app/src/main/res/layout/activity_add_weight.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -86,6 +85,7 @@
                 android:layout_alignParentEnd="true"
                 android:layout_centerVertical="true"
                 android:layout_marginEnd="@dimen/_10sdp"
+                android:contentDescription="@string/image"
                 android:src="@drawable/downaero" />
 
         </RelativeLayout>
@@ -115,6 +115,7 @@
                 android:layout_alignParentEnd="true"
                 android:layout_centerVertical="true"
                 android:layout_marginEnd="@dimen/_10sdp"
+                android:contentDescription="@string/image"
                 android:src="@drawable/downaero" />
 
         </RelativeLayout>
@@ -132,13 +133,13 @@
                 android:layout_marginStart="@dimen/_5sdp"
                 android:background="@null" />
 
-
             <ImageView
                 android:layout_width="@dimen/_8sdp"
                 android:layout_height="@dimen/_8sdp"
                 android:layout_alignParentEnd="true"
                 android:layout_centerVertical="true"
                 android:layout_marginEnd="@dimen/_10sdp"
+                android:contentDescription="@string/image"
                 android:src="@drawable/downaero" />
 
         </RelativeLayout>
