--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -11,87 +11,82 @@
     </data>
 
 
-<LinearLayout
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context=".ui.auth.forgotpassword.ForgotPasswordActivity">
-
-    <androidx.core.widget.NestedScrollView
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:fillViewport="true"  >
+        android:orientation="vertical"
+        tools:context=".ui.auth.forgotpassword.ForgotPasswordActivity">
 
-        <LinearLayout
+        <androidx.core.widget.NestedScrollView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@drawable/bg"
-            android:paddingStart="@dimen/_20sdp"
-            android:paddingEnd="@dimen/_20sdp"
-            android:orientation="vertical">
+            android:layout_height="match_parent"
+            android:fillViewport="true">
 
-            <ImageView
-                android:layout_width="@dimen/_100sdp"
-                android:layout_height="@dimen/_100sdp"
-                android:src="@drawable/logo"
-                android:layout_gravity="center"
-                android:layout_marginTop="@dimen/_80sdp"
-                android:contentDescription="@string/image" />
-
-            <TextView
-                android:layout_width="wrap_content"
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/forgot_pass"
-                android:layout_marginTop="@dimen/_20sdp"
-                android:fontFamily="@font/courgette_regular"
-                android:textSize="@dimen/_20sdp"
-                android:textColor="@color/theme_Color"
-                />
+                android:background="@drawable/bg"
+                android:orientation="vertical"
+                android:paddingStart="@dimen/_20sdp"
+                android:paddingEnd="@dimen/_20sdp">
 
-            <TextView
-                style="@style/WrapTextView"
-                android:text="@string/please_fill_your_register_email_we_will_send_a_four_digit_code_on_there"
-                android:layout_marginTop="@dimen/_5sdp"
-                android:textColor="@color/grey"
-                android:fontFamily="@font/opensans_semibold"
-                />
+                <ImageView
+                    android:layout_width="@dimen/_100sdp"
+                    android:layout_height="@dimen/_100sdp"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="@dimen/_80sdp"
+                    android:contentDescription="@string/image"
+                    android:src="@drawable/logo" />
 
-            <TextView
-                style="@style/WrapTextView"
-                android:text="@string/email"
-                android:layout_marginTop="@dimen/_20sdp"
-                android:textSize="@dimen/_14sdp"
-                />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/_20sdp"
+                    android:fontFamily="@font/courgette_regular"
+                    android:text="@string/forgot_pass"
+                    android:textColor="@color/theme_Color"
+                    android:textSize="@dimen/_20sdp" />
 
-            <EditText
-                style="@style/MatchEditText"
-                android:background="@drawable/bg_edit_text"
-                android:layout_marginTop="@dimen/_10sdp"
-                android:hint="@string/enter_email"
-                android:paddingStart="@dimen/_10sdp"
-                android:text="@{forgotVM.email}"
-                android:imeOptions="actionDone"
-                android:inputType="textEmailAddress"
-                android:paddingEnd="@dimen/_10sdp"/>
+                <TextView
+                    style="@style/WrapTextView"
+                    android:layout_marginTop="@dimen/_5sdp"
+                    android:fontFamily="@font/opensans_semibold"
+                    android:text="@string/please_fill_your_register_email_we_will_send_a_four_digit_code_on_there"
+                    android:textColor="@color/grey" />
 
+                <TextView
+                    style="@style/WrapTextView"
+                    android:layout_marginTop="@dimen/_20sdp"
+                    android:text="@string/email"
+                    android:textSize="@dimen/_14sdp" />
 
-            <androidx.appcompat.widget.AppCompatButton
-                android:id="@+id/login"
-                style="@style/ButtonMatch"
-                android:layout_marginTop="@dimen/_20sdp"
-                android:background="@drawable/bg_sky_blue_10dp"
-                android:contentDescription="@string/image"
-                android:onClick="@{(view)-> forgotVM.onClick(view,`btnSubmit`)}"
-                android:text="@string/submit" />
-
-
-        </LinearLayout>
-
-
-    </androidx.core.widget.NestedScrollView>
+                <EditText
+                    style="@style/MatchEditText"
+                    android:layout_marginTop="@dimen/_10sdp"
+                    android:background="@drawable/bg_edit_text"
+                    android:hint="@string/enter_email"
+                    android:imeOptions="actionDone"
+                    android:inputType="textEmailAddress"
+                    android:paddingStart="@dimen/_10sdp"
+                    android:paddingEnd="@dimen/_10sdp"
+                    android:text="@{forgotVM.email}" />
 
 
+                <androidx.appcompat.widget.AppCompatButton
+                    android:id="@+id/login"
+                    style="@style/ButtonMatch"
+                    android:layout_marginTop="@dimen/_20sdp"
+                    android:background="@drawable/bg_sky_blue_10dp"
+                    android:contentDescription="@string/image"
+                    android:onClick="@{(view)-> forgotVM.onClick(view,`btnSubmit`)}"
+                    android:text="@string/submit" />
 
 
-</LinearLayout>
+            </LinearLayout>
+
+
+        </androidx.core.widget.NestedScrollView>
+
+
+    </LinearLayout>
 </layout>
