--- a/app/src/main/res/layout/activity_my_pet_profile.xml
+++ b/app/src/main/res/layout/activity_my_pet_profile.xml
@@ -7,8 +7,9 @@
     android:orientation="vertical"
     tools:context=".ui.main.ui.mypetprofile.MyPetProfileActivity">
 
-    <include layout="@layout/auth_toolbar"
-        android:id="@+id/tb"/>
+    <include
+        android:id="@+id/tb"
+        layout="@layout/auth_toolbar" />
 
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
