--- a/app/src/main/res/layout/activity_your_pet_detail.xml
+++ b/app/src/main/res/layout/activity_your_pet_detail.xml
@@ -6,191 +6,195 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".ui.main.ui.petdetail.YourPetDetailActivity">
+
     <include
-        layout="@layout/auth_toolbar"
         android:id="@+id/tb"
-        />
+        layout="@layout/auth_toolbar" />
+
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:fillViewport="true"  >
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@drawable/bg"
-        android:paddingStart="@dimen/_20sdp"
-        android:paddingEnd="@dimen/_20sdp"
-        android:orientation="vertical">
-
-        <RelativeLayout
-            android:layout_width="wrap_content"
-            android:layout_marginTop="@dimen/_60sdp"
-            android:layout_gravity="center"
-            android:layout_height="wrap_content">
-
-
-        <com.makeramen.roundedimageview.RoundedImageView
-            android:layout_width="@dimen/_150sdp"
-            android:layout_height="@dimen/_150sdp"
-            android:src="@drawable/frame"
-            android:contentDescription="@string/image" />
-
-            <TextView
-                android:id="@+id/tv_service"
-                style="@style/WrapTextView"
-                android:text="App your pet images"
-                android:textSize="@dimen/_10sdp"
-                android:layout_centerVertical="true"
-                android:layout_centerInParent="true"
-                />
-        </RelativeLayout>
-        <EditText
-            style="@style/MatchEditText"
-            android:background="@drawable/bg_edit_text"
-            android:layout_marginTop="@dimen/_10sdp"
-            android:hint="@string/name"
-            android:textColorHint="@color/black"
-            android:paddingStart="@dimen/_10sdp"
-            android:imeOptions="actionDone"
-            android:inputType="textEmailAddress"
-            android:paddingEnd="@dimen/_10sdp"/>
+        android:fillViewport="true">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/_10sdp"
-            android:orientation="horizontal"
-            android:weightSum="2">
+            android:background="@drawable/bg"
+            android:orientation="vertical"
+            android:paddingStart="@dimen/_20sdp"
+            android:paddingEnd="@dimen/_20sdp">
+
+            <RelativeLayout
+                android:layout_width="@dimen/_160sdp"
+                android:layout_height="@dimen/_150sdp"
+                android:layout_gravity="center"
+                android:layout_marginTop="@dimen/_60sdp">
+
+
+                <de.hdodenhof.circleimageview.CircleImageView
+                    android:id="@+id/civPetProfile"
+                    android:layout_width="@dimen/_150sdp"
+                    android:layout_height="@dimen/_150sdp"
+                    android:contentDescription="@string/image"
+                    android:src="@drawable/pet_pic" />
+
+                <ImageView
+                    android:id="@+id/ivCamera"
+                    android:layout_width="@dimen/_40sdp"
+                    android:layout_height="@dimen/_40sdp"
+                    android:layout_alignParentEnd="true"
+                    android:layout_alignParentBottom="true"
+                    android:layout_marginEnd="@dimen/_8sdp"
+                    android:layout_marginBottom="@dimen/_5sdp"
+                    android:contentDescription="@string/image"
+                    android:src="@drawable/camera" />
+            </RelativeLayout>
+
+            <EditText
+                style="@style/MatchEditText"
+                android:layout_marginTop="@dimen/_10sdp"
+                android:background="@drawable/bg_edit_text"
+                android:hint="@string/name"
+                android:imeOptions="actionDone"
+                android:inputType="textEmailAddress"
+                android:paddingStart="@dimen/_10sdp"
+                android:paddingEnd="@dimen/_10sdp"
+                android:textColorHint="@color/black" />
 
             <LinearLayout
-                android:layout_width="0dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="@dimen/_5sdp"
-                android:layout_weight="1"
-                android:orientation="vertical">
+                android:layout_marginTop="@dimen/_10sdp"
+                android:orientation="horizontal"
+                android:weightSum="2">
+
+                <LinearLayout
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="@dimen/_5sdp"
+                    android:layout_weight="1"
+                    android:orientation="vertical">
 
 
-                <RelativeLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="@dimen/_35sdp"
-                    android:layout_marginTop="@dimen/_10sdp"
-                    android:background="@drawable/bg_edit_text">
-
-                    <Spinner
-                        android:id="@+id/spinnerGender"
+                    <RelativeLayout
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:background="@null" />
+                        android:layout_height="@dimen/_35sdp"
+                        android:layout_marginTop="@dimen/_10sdp"
+                        android:background="@drawable/bg_edit_text">
+
+                        <Spinner
+                            android:id="@+id/spinnerGender"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:background="@null" />
 
 
-                    <ImageView
-                        android:layout_width="@dimen/_8sdp"
-                        android:layout_height="@dimen/_8sdp"
-                        android:layout_alignParentEnd="true"
-                        android:layout_centerVertical="true"
-                        android:layout_marginEnd="@dimen/_10sdp"
-                        android:src="@drawable/downaero" />
+                        <ImageView
+                            android:layout_width="@dimen/_8sdp"
+                            android:layout_height="@dimen/_8sdp"
+                            android:layout_alignParentEnd="true"
+                            android:layout_centerVertical="true"
+                            android:layout_marginEnd="@dimen/_10sdp"
+                            android:src="@drawable/downaero" />
 
-                </RelativeLayout>
+                    </RelativeLayout>
 
 
-
-                <RelativeLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="@dimen/_35sdp"
-                    android:layout_marginTop="@dimen/_10sdp"
-                    android:background="@drawable/bg_edit_text">
-
-                    <Spinner
-                        android:id="@+id/spinnerWeight"
+                    <RelativeLayout
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:background="@null" />
+                        android:layout_height="@dimen/_35sdp"
+                        android:layout_marginTop="@dimen/_10sdp"
+                        android:background="@drawable/bg_edit_text">
+
+                        <Spinner
+                            android:id="@+id/spinnerWeight"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:background="@null" />
 
 
-                    <ImageView
-                        android:layout_width="@dimen/_8sdp"
-                        android:layout_height="@dimen/_8sdp"
-                        android:layout_alignParentEnd="true"
-                        android:layout_centerVertical="true"
-                        android:layout_marginEnd="@dimen/_10sdp"
-                        android:src="@drawable/downaero" />
+                        <ImageView
+                            android:layout_width="@dimen/_8sdp"
+                            android:layout_height="@dimen/_8sdp"
+                            android:layout_alignParentEnd="true"
+                            android:layout_centerVertical="true"
+                            android:layout_marginEnd="@dimen/_10sdp"
+                            android:src="@drawable/downaero" />
 
-                </RelativeLayout>
+                    </RelativeLayout>
 
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/_5sdp"
+                    android:layout_weight="1"
+                    android:orientation="vertical">
+
+                    <RelativeLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="@dimen/_35sdp"
+                        android:layout_marginTop="@dimen/_10sdp"
+                        android:background="@drawable/bg_edit_text">
+
+                        <Spinner
+                            android:id="@+id/spinnerAge"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:background="@null" />
+
+
+                        <ImageView
+                            android:layout_width="@dimen/_8sdp"
+                            android:layout_height="@dimen/_8sdp"
+                            android:layout_alignParentEnd="true"
+                            android:layout_centerVertical="true"
+                            android:layout_marginEnd="@dimen/_10sdp"
+                            android:src="@drawable/downaero" />
+
+
+                    </RelativeLayout>
+
+
+                    <EditText
+                        style="@style/MatchEditText"
+                        android:layout_marginTop="@dimen/_10sdp"
+                        android:background="@drawable/bg_edit_text"
+                        android:hint="@string/breed"
+                        android:imeOptions="actionDone"
+                        android:inputType="textEmailAddress"
+                        android:paddingStart="@dimen/_10sdp"
+                        android:paddingEnd="@dimen/_10sdp" />
+
+
+                </LinearLayout>
             </LinearLayout>
 
-            <LinearLayout
-                android:layout_width="0dp"
+            <EditText
+                style="@style/MatchEditText"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/_5sdp"
-                android:layout_weight="1"
-                android:orientation="vertical">
+                android:layout_marginTop="@dimen/_10sdp"
+                android:background="@drawable/bg_edit_text"
+                android:gravity="start|top"
+                android:hint="@string/about_pet"
+                android:imeOptions="actionDone"
+                android:inputType="textMultiLine"
+                android:maxHeight="@dimen/_100sdp"
+                android:minHeight="@dimen/_100sdp"
+                android:paddingStart="@dimen/_10sdp"
+                android:paddingTop="@dimen/_10sdp"
+                android:paddingEnd="@dimen/_10sdp"
+                android:textColorHint="@color/black" />
 
-                <RelativeLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="@dimen/_35sdp"
-                    android:layout_marginTop="@dimen/_10sdp"
-                    android:background="@drawable/bg_edit_text">
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/btnPetDetail"
+                style="@style/ButtonMatch"
+                android:layout_margin="@dimen/_20sdp"
+                android:background="@drawable/bg_sky_blue_10dp"
+                android:contentDescription="@string/image"
+                android:text="@string/submit" />
 
-                    <Spinner
-                        android:id="@+id/spinnerAge"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:background="@null" />
-
-
-                    <ImageView
-                        android:layout_width="@dimen/_8sdp"
-                        android:layout_height="@dimen/_8sdp"
-                        android:layout_alignParentEnd="true"
-                        android:layout_centerVertical="true"
-                        android:layout_marginEnd="@dimen/_10sdp"
-                        android:src="@drawable/downaero" />
-
-
-                </RelativeLayout>
-
-
-                <EditText
-                    style="@style/MatchEditText"
-                    android:background="@drawable/bg_edit_text"
-                    android:hint="@string/breed"
-                    android:imeOptions="actionDone"
-                    android:layout_marginTop="@dimen/_10sdp"
-                    android:inputType="textEmailAddress"
-                    android:paddingStart="@dimen/_10sdp"
-                    android:paddingEnd="@dimen/_10sdp" />
-
-
-            </LinearLayout>
         </LinearLayout>
-
-        <EditText
-            style="@style/MatchEditText"
-            android:background="@drawable/bg_edit_text"
-            android:layout_marginTop="@dimen/_10sdp"
-            android:layout_height="wrap_content"
-            android:hint="@string/about_pet"
-            android:gravity="start|top"
-            android:paddingTop="@dimen/_10sdp"
-            android:maxHeight="@dimen/_100sdp"
-            android:minHeight="@dimen/_100sdp"
-            android:textColorHint="@color/black"
-            android:paddingStart="@dimen/_10sdp"
-            android:imeOptions="actionDone"
-            android:inputType="textMultiLine"
-            android:paddingEnd="@dimen/_10sdp"/>
-
-        <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/btnPetDetail"
-            style="@style/ButtonMatch"
-            android:layout_margin="@dimen/_20sdp"
-            android:background="@drawable/bg_sky_blue_10dp"
-            android:contentDescription="@string/image"
-            android:text="@string/submit" />
-
-    </LinearLayout>
     </androidx.core.widget.NestedScrollView>
 </LinearLayout>
