--- a/app/src/main/res/layout/dialog_add_new_pet.xml
+++ b/app/src/main/res/layout/dialog_add_new_pet.xml
@@ -2,18 +2,19 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@drawable/bg_white_corners_10dp"
-    android:orientation="vertical"
-    android:paddingBottom="@dimen/_20sdp"
     android:layout_marginStart="@dimen/_20sdp"
     android:layout_marginEnd="@dimen/_20sdp"
-   >
-<ImageView
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_gravity="center"
-    android:layout_marginTop="@dimen/_10sdp"
-    android:src="@drawable/logo"/>
+    android:background="@drawable/bg_white_corners_10dp"
+    android:orientation="vertical"
+    android:paddingBottom="@dimen/_20sdp">
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginTop="@dimen/_10sdp"
+        android:src="@drawable/logo" />
+
     <TextView
         android:id="@+id/tvTitle"
         style="@style/TextMediumFont"
@@ -26,8 +27,7 @@
         android:paddingStart="@dimen/_5sdp"
         android:paddingEnd="@dimen/_5sdp"
         android:text="@string/your_pet_detail_added_successfully_do_you_want_another_dog"
-        android:textColor="@color/black"
-        />
+        android:textColor="@color/black" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -39,20 +39,20 @@
         <Button
             android:id="@+id/Add"
             style="@style/ButtonMatch"
-            android:background="@drawable/bg_sky_blue_10dp"
             android:layout_width="130dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:background="@drawable/bg_sky_blue_10dp"
             android:text="@string/add_new" />
 
         <Button
             android:id="@+id/later"
             style="@style/ButtonMatch"
-            android:background="@drawable/bg_sky_blue_10dp"
             android:layout_width="130dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginStart="@dimen/_10sdp"
+            android:background="@drawable/bg_sky_blue_10dp"
             android:text="@string/later" />
 
 
