--- a/app/src/main/res/layout/item_appointment.xml
+++ b/app/src/main/res/layout/item_appointment.xml
@@ -52,8 +52,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:textSize="@dimen/_9sdp"
-            android:text="@string/remainder" />
+            android:text="@string/remainder"
+            android:textSize="@dimen/_9sdp" />
 
 
         <androidx.appcompat.widget.SwitchCompat
