--- a/app/src/main/res/layout/item_services.xml
+++ b/app/src/main/res/layout/item_services.xml
@@ -2,8 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="@dimen/_100sdp"
-    android:layout_marginBottom="@dimen/_10sdp"
     android:layout_marginEnd="@dimen/_10sdp"
+    android:layout_marginBottom="@dimen/_10sdp"
     android:background="@drawable/bg_sky_blue_10dp"
     android:elevation="@dimen/_5sdp"
     android:orientation="vertical">
@@ -15,8 +15,8 @@
         android:layout_marginStart="@dimen/_5sdp"
         android:layout_marginTop="@dimen/_5sdp"
         android:text="@string/feeding"
-        android:textSize="@dimen/_10sdp"
-        android:textColor="@color/white" />
+        android:textColor="@color/white"
+        android:textSize="@dimen/_10sdp" />
 
 
     <LinearLayout
