--- a/app/src/main/res/layout/item_your_dogs.xml
+++ b/app/src/main/res/layout/item_your_dogs.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_marginBottom="@dimen/_8sdp">
 
 
@@ -10,10 +10,10 @@
         android:id="@+id/ivDog"
         android:layout_width="@dimen/_25sdp"
         android:layout_height="@dimen/_25sdp"
-        app:civ_border_color="@color/theme_Color"
-        app:civ_border_width="@dimen/_1sdp"
         android:layout_centerVertical="true"
-        android:src="@drawable/dogsimg" />
+        android:src="@drawable/dogsimg"
+        app:civ_border_color="@color/theme_Color"
+        app:civ_border_width="@dimen/_1sdp" />
 
     <TextView
         android:id="@+id/tvDogName"
