--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,17 +1,15 @@
-<resources xmlns:tools="http://schemas.android.com/tools">
+<resources>
     <!-- Base application theme. -->
-    <style name="Theme.PuppyPedia" parent="Theme.MaterialComponents.Light.NoActionBar">
-        <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/theme_Color</item>
-        <item name="colorPrimaryVariant">@color/white</item>
-        <item name="colorOnPrimary">@color/white</item>
-        <item name="android:windowLightStatusBar">true</item>
-
-        <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
+    <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Customize your theme here. -->
+        <item name="colorPrimary">@color/theme_Color</item>
+        <item name="colorPrimaryDark">@color/white</item>
+        <item name="colorAccent">@color/colorAccent</item>
+        <item name="android:windowDisablePreview">true</item>
+        <item name="android:windowLightStatusBar">true</item>
     </style>
 
-    <style name="TextMediumFont" parent="Widget.AppCompat.TextView">
+     <style name="TextMediumFont" parent="Widget.AppCompat.TextView">
         <item name="fontFamily">@font/opensans_semibold</item>
         <item name="android:textSize">@dimen/_12sdp</item>
         <item name="android:textColor">@color/black</item>
@@ -69,7 +67,7 @@
         <item name="android:textSize">@dimen/_12sdp</item>
     </style>
 
-    <style name="CalendarTheme" parent="Theme.PuppyPedia">
+    <style name="CalendarTheme" parent="AppTheme">
         <item name="android:textColorPrimary">@color/black</item>
         <item name="colorControlActivated">@color/theme_Color</item>
         <item name="android:fontFamily">@font/courgette_regular</item>
@@ -84,7 +82,7 @@
         <item name="android:textColor">@color/black</item>
     </style>
 
-    <style name="AppTheme.Picker" parent="Theme.PuppyPedia">
+    <style name="AppTheme.Picker" parent="AppTheme">
         <item name="android:textColorPrimary">@color/black</item>
         <item name="android:textSize">@dimen/_15sdp</item>
         <item name="android:fontFamily">@font/opensans_regular</item>
